-- add arabic translation.

version 5.3.0
-- fix a build time error when build with certain new compilers and a runtime crush when build with other newer compilers.
-- add more support for wayland sessions by not requiring GUI to run from root's account to perform some operations.
-- add support for creating LUKS2 volumes(libcryptsetup >=2.0.0 is required)
-- add support for unlocking of TrueCrypt and VeraCrypt volumes without mounting their file system.
   -- unlocking of a TrueCrypt volume is done by command: zuluCrypt-cli -O -d /dev/sdXX -t tcrypt
   -- unlocking of a VeraCrypt volume is done by command: zuluCrypt-cli -O -d /dev/sdXX -t vcrypt

version 5.4.0
-- fix a bug that caused a wrong password to be used when creating a TrueCrypt/VeraCrypt volume from zuluCrypt-gui.
   Easiest way to notice this was that a just created volume could not be unlocked.
-- fix a build issue on some distributions.

version 5.5.0
-- Add support for unlocking bitlocker volumes using dislocker(https://github.com/Aorimn/dislocker)
-- Fix a build issue on some distributions.
-- Add ability to create a plain dm-crypt volume at the end of a regular file(steganography).
-- Various fixes and improvements.

version 5.6.0
-- Add ability to create volume keys using YubiKey's challenge-response feature.
-- Add GUI options to clear dead mount points(these are unused mount folders located
   at /run/media/private/$USER). CLI users should call CLI components with "--clear-dead-mount-points"
-- Fix a race condition bug introduced in version 5.5.0 that prevented volumes from getting mounted
  under certain circumstances.

version 5.7.0
-- Fix a bug introduced in 5.6.0 that prevents unlocking PLAIN dm-crypt volume that use non default
   crypto options because the selection button in is zuluCrypt-gui always disabled.
-- Update French translations.
-- Dont resolve loop device paths to their backing file if they are partitioned.